tests/kulezi_tests/good/simple02.lat
int main() {
    2 + 2 * 2;
    false || true;
    "a" + "b";
    printInt(2 + 2 * 2);
    return 0;
}