tests/kulezi_tests/bad/invalid_array_index.lat
int main() {
    int[] x = new int[5];
    printInt(x["1"]);
}